# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes

2006-01-24 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Fixed bug with spellchecker initialization when an aspell word list is not installed.

2006-01-14 Piotr Ozarowski <ozarow@gmail.com>
	* Filmweb movie plugin updated

2006-01-08 Piotr Ozarowski <ozarow@gmail.com>
	* CSV template updated (still needs some work)

2006-01-07 Piotr Ozarowski <ozarow@gmail.com>
	* [Bug #5685] AnimeDB plugin really works again

2006-01-06 Vasco Nunes <vasco.m.nunes@gmail.com>
	* German OFDB (Online-Filmdatenbank) movie plugin updated. (Christian Sagmueller)
	* German translation updated. (Christian Sagmueller)
	* Portuguese translation updated.

2006-01-05 Vasco Nunes <vasco.m.nunes@gmail.com>
	* [Bug #5627] 7arte.net plugin with weird characters on actors field

2006-01-04 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Main treeview being populated twice on startup. Fixed.

2006-01-04 Piotr Ozarowski <ozarow@gmail.com>
	* AnimeDB plugin works again

2006-01-03 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed bad vol./col. ID in ComboBox after adding new entry

2006-01-02 Vasco Nunes <vasco.m.nunes@gmail.com>
	* [Bug #5999] Encoding problem with E-Pipoca movie plugin

2005-12-28 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed crash when volume or collection name wasn't string

2005-12-28 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Proprietary unicode font used on PDF reports replaced with a free one (DejaVu)
	* Some changes to simple list PDF export plugin

2005-12-27 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added spanish translation (thanks to Daniel Ucero)

2005-12-05 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed aspell related problems

2005-11-30 Piotr Ozarowski <ozarow@gmail.com>
	* XML template updated (HTML export plugin)

---- 0.5.1 ----

2005-11-26 Piotr Ozarowski <ozarow@gmail.com>
	* Updated polish translation

2005-11-22 Vasco Nunes <vasco.m.nunes@gmail.com>