@@ -429,7 +429,7 @@
 	      <child>
 		<widget class="GtkToolButton" id="toolbutton2">
 		  <property name="visible">True</property>
-		  <property name="tooltip" translatable="yes">Adds new movie</property>
+		  <property name="tooltip" translatable="yes">Add new movie</property>
 		  <property name="stock_id">gtk-add</property>
 		  <property name="visible_horizontal">True</property>
 		  <property name="visible_vertical">True</property>
@@ -464,7 +464,7 @@
 	      <child>
 		<widget class="GtkToolButton" id="toolbutton5">
 		  <property name="visible">True</property>
-		  <property name="tooltip" translatable="yes">Removes selected movie</property>
+		  <property name="tooltip" translatable="yes">Remove selected movie</property>
 		  <property name="label" translatable="yes">Delete</property>
 		  <property name="use_underline">True</property>
 		  <property name="stock_id">gtk-delete</property>
@@ -499,28 +499,9 @@
 	      </child>
 
 	      <child>
-		<widget class="GtkToolItem" id="toolitem4">
-		  <property name="visible">True</property>
-		  <property name="visible_horizontal">True</property>
-		  <property name="visible_vertical">True</property>
-		  <property name="is_important">False</property>
-
-		  <child>
-		    <widget class="GtkVSeparator" id="vseparator7">
-		      <property name="visible">True</property>
-		    </widget>
-		  </child>
-		</widget>
-		<packing>
-		  <property name="expand">False</property>
-		  <property name="homogeneous">False</property>
-		</packing>
-	      </child>
-
-	      <child>
 		<widget class="GtkToolButton" id="toolbutton9">
 		  <property name="visible">True</property>
-		  <property name="tooltip" translatable="yes">Selects first movie</property>
+		  <property name="tooltip" translatable="yes">Select first movie</property>
 		  <property name="stock_id">gtk-goto-first</property>
 		  <property name="visible_horizontal">True</property>
 		  <property name="visible_vertical">True</property>
@@ -537,7 +518,7 @@
 		<widget class="GtkToolButton" id="toolbutton10">
 		  <property name="visible">True</property>
 		  <property name="sensitive">False</property>
-		  <property name="tooltip" translatable="yes">Selects last movie</property>
+		  <property name="tooltip" translatable="yes">Select last movie</property>
 		  <property name="stock_id">gtk-goto-last</property>
 		  <property name="visible_horizontal">True</property>
 		  <property name="visible_vertical">True</property>
@@ -547,25 +528,6 @@
 		<packing>
 		  <property name="expand">False</property>
 		  <property name="homogeneous">True</property>
-		</packing>
-	      </child>
-
-	      <child>
-		<widget class="GtkToolItem" id="toolitem5">
-		  <property name="visible">True</property>
-		  <property name="visible_horizontal">True</property>
-		  <property name="visible_vertical">True</property>
-		  <property name="is_important">False</property>
-
-		  <child>
-		    <widget class="GtkVSeparator" id="vseparator8">
-		      <property name="visible">True</property>
-		    </widget>
-		  </child>
-		</widget>
-		<packing>
-		  <property name="expand">False</property>
-		  <property name="homogeneous">False</property>
 		</packing>
 	      </child>
 	    </widget>
@@ -2554,7 +2516,7 @@ Year</property>
 					  <child>
 					    <widget class="GtkButton" id="e_lang_add">
 					      <property name="visible">True</property>
-					      <property name="tooltip" translatable="yes">Adds new language entry</property>
+					      <property name="tooltip" translatable="yes">Add new language entry</property>
 					      <property name="can_focus">True</property>
 					      <property name="relief">GTK_RELIEF_NORMAL</property>
 					      <property name="focus_on_click">True</property>
@@ -2642,7 +2604,7 @@ Year</property>
 					  <child>
 					    <widget class="GtkButton" id="e_lang_remove">
 					      <property name="visible">True</property>
-					      <property name="tooltip" translatable="yes">Removes last language entry</property>
+					      <property name="tooltip" translatable="yes">Remove last language entry</property>
 					      <property name="can_focus">True</property>
 					      <property name="relief">GTK_RELIEF_NORMAL</property>
 					      <property name="focus_on_click">True</property>
@@ -2840,7 +2802,7 @@ Year</property>
 					  <child>
 					    <widget class="GtkButton" id="e_sub_add">
 					      <property name="visible">True</property>
-					      <property name="tooltip" translatable="yes">Adds new subtitle entry</property>
+					      <property name="tooltip" translatable="yes">Add new subtitle entry</property>
 					      <property name="can_focus">True</property>
 					      <property name="relief">GTK_RELIEF_NORMAL</property>
 					      <property name="focus_on_click">True</property>
@@ -2928,7 +2890,7 @@ Year</property>
 					  <child>
 					    <widget class="GtkButton" id="e_sub_remove">
 					      <property name="visible">True</property>
-					      <property name="tooltip" translatable="yes">Removes last subtitle entry</property>
+					      <property name="tooltip" translatable="yes">Remove last subtitle entry</property>
 					      <property name="can_focus">True</property>
 					      <property name="relief">GTK_RELIEF_NORMAL</property>
 					      <property name="focus_on_click">True</property>
