@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2006 Vasco Nunes
 
+2006-01-28 Piotr Ozarowski <ozarow@gmail.com>
+	* Added Languages feature (still needs testing)
+
 2006-01-24 Vasco Nunes <vasco.m.nunes@gmail.com>
 	* Fixed bug with spellchecker initialization when an aspell word list is not installed.
 
